--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ function topFunction() {
       <td></td>
     </tr>
         <tr>
-      <th><a href="C:\Users\student\Desktop\Програмист\Werty 2.html">Тручек Никита</a><p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Ryan_Gosling_in_2018.jpg/800px-Ryan_Gosling_in_2018.jpg" style="text-align: center;" height="100px" alt="Письма мастера дзен"></p></th>
+      <th><a href="C:\Users\student\Desktop\Програмист\Index 2.html">Тручек Никита</a><p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Ryan_Gosling_in_2018.jpg/800px-Ryan_Gosling_in_2018.jpg" style="text-align: center;" height="100px" alt="Письма мастера дзен"></p></th>
       <td>5</td>
       <td>5</td>
       <td>6</td>
