--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="center" class="jumbotron p-3 p-md-5 text-white rounded bg-dark" style="background-color: white !important; border: 4px double black;">
         <div class="col-md-12 px-0">
           <h1 class="display-4 font-italic" align="center" style="color: black;">dkharlanov</h1>
-         <img src=" https://storage11.eljur.ru/storage/3db3d51b21d910bf13917f0096b61225?filename=image1-3-780x439.jpeg&domain=school10kd" width="400" height="700">
+         <img src=" https://storage11.eljur.ru/storage/3db3d51b21d910bf13917f0096b61225?filename=image1-3-780x439.jpeg&domain=school10kd" width="100%" height="auto"
           <p class="lead my-3" align="center" style="color: black;">На данном пробном сайте вы можете 
             ознакомится с основами Web-разработки, основами Python, а также подготовиться к ОГЭ-2023</p>
         </div>
