--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div id="center" class="jumbotron p-3 p-md-5 text-white rounded bg-dark" style="background-color: white !important; border: 4px double black;">
         <div class="col-md-12 px-0">
-          <h1 class="display-4 font-italic" align="center" style="color: black;">Подземелье и драконы — настольная ролевая игра в жанре фэнтези, разработанная Гэри Гайгэксом и Дэйвом Арнесоном[en][1]. Впервые была издана в 1974 году компанией «Tactical Studies Rules, Inc.» (TSR).</h1>
+          <h1 class="display-4 font-italic" align="center" style="color: black;">Подземелье и драконы — настольная ролевая игра в жанре фэнтези, разработанная Гэри Гайгэксом и Дэйвом Арнесоном. Впервые была издана в 1974 году компанией «Tactical Studies Rules, Inc.»</h1>
           
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
