--- a/header.html
+++ b/header.html
@@ -10,13 +10,13 @@
           <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="startWeb.html">lololo</a>
+          <a class="nav-link" href="startWeb.html">История</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="startPython.html">Основы Python</a>
+          <a class="nav-link" href="startPython.html">Основы игры</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="oge.html">ОГЭ 2023</a>
+          <a class="nav-link" href="oge.html">Поп-культура</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
