--- a/oge.html
+++ b/oge.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Сайт-Шаблон</title>
+    <title>История Днд</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="css/button.css" rel="stylesheet" type="text/css">
     <script src="js/button.js"></script>
@@ -23,8 +23,12 @@
 
       <div id="center" class="jumbotron p-3 p-md-5 text-white rounded bg-dark" style="background-color: white !important; border: 4px double black;">
           <div class="col-md-12 px-0">
-            <h1 class="display-4 font-italic" align="center" style="color: black;">ОГЭ-2023</h1>
-            <p class="lead my-3" align="center" style="color: black;">На данном пробном сайте вы можете подготовиться к ОГЭ-2023</p>
+            <h1 class="display-4 font-italic" align="center" style="color: black;">История</h1>
+            <p class="lead my-3" align="center" style="color: black;">Изначально Dungeons & Dragons представляла собой дополнение к настольному варгейму «Chainmail». Основным отличием являлось введение в игру различных фантастических существ и волшебных предметов. Впоследствии под управлением игроков оказались не военные отряды, а отдельные персонажи, действие игр было перенесено в подземелья. Ведущий (Dungeon Master) является арбитром и рассказчиком. Игроки создают группу из нескольких персонажей, которая взаимодействует с окружающим миром, разрешает различные конфликты, участвует в сражениях и получает награды.
+
+Ранний успех Dungeons & Dragons привёл к распространению схожих игровых систем. В 1977 году система была разделена на две ветви: более простая в освоении Dungeons & Dragons (D&D) и более структурированная Advanced Dungeons & Dragons (AD&D). В 1989 году было опубликовано второе издание AD&D. В 2000 году первоначальная серия игр D&D была прервана, изданная третья редакция AD&D с новой системой была переименована в D&D, которая легла в основу d20 System. В 2008 году была опубликована четвёртая редакция, а в 2014 — пятая. Кроме того, со второй половины 2000-х годов вокруг игры возникло так называемое «Возрождение старой школы», которое стало в итоге относительно значимым явлением в настольных ролевых играх.
+
+Присутствие различных фантастических существ позволяет сравнивать Dungeons & Dragons с творчеством Дж. Р. Р. Толкина, хотя Гайгэкс утверждал, что влияние романа «Властелин колец» было незначительным, а использование его элементов — всего лишь маркетинговым ходом. Впоследствии на D&D оказало влияние творчество других писателей</p>
             <p class="lead mb-0" align="center" style="color: black;"><a href="https://inf-oge.sdamgia.ru" class="text-black font-weight-bold">Ссылка на Решу ОГЭ-2023</a></p>
           </div>
         </div>
