--- a/oge.html
+++ b/oge.html
@@ -29,7 +29,8 @@
 Ранний успех Dungeons & Dragons привёл к распространению схожих игровых систем. В 1977 году система была разделена на две ветви: более простая в освоении Dungeons & Dragons (D&D) и более структурированная Advanced Dungeons & Dragons (AD&D). В 1989 году было опубликовано второе издание AD&D. В 2000 году первоначальная серия игр D&D была прервана, изданная третья редакция AD&D с новой системой была переименована в D&D, которая легла в основу d20 System. В 2008 году была опубликована четвёртая редакция, а в 2014 — пятая. Кроме того, со второй половины 2000-х годов вокруг игры возникло так называемое «Возрождение старой школы», которое стало в итоге относительно значимым явлением в настольных ролевых играх.
 
 Присутствие различных фантастических существ позволяет сравнивать Dungeons & Dragons с творчеством Дж. Р. Р. Толкина, хотя Гайгэкс утверждал, что влияние романа «Властелин колец» было незначительным, а использование его элементов — всего лишь маркетинговым ходом. Впоследствии на D&D оказало влияние творчество других писателей</p>
-            <p class="lead mb-0" align="center" style="color: black;"><a href="https://inf-oge.sdamgia.ru" class="text-black font-weight-bold">Ссылка на Решу ОГЭ-2023</a></p>
+           
+            <img src="https://i.pinimg.com/originals/39/70/fd/3970fd45f8264338153834f7ff18f4f0.gif" />
           </div>
         </div>
       </div>
