--- a/oge.html
+++ b/oge.html
@@ -30,7 +30,7 @@
 
 Присутствие различных фантастических существ позволяет сравнивать Dungeons & Dragons с творчеством Дж. Р. Р. Толкина, хотя Гайгэкс утверждал, что влияние романа «Властелин колец» было незначительным, а использование его элементов — всего лишь маркетинговым ходом. Впоследствии на D&D оказало влияние творчество других писателей</p>
            
-            <img src="https://i.pinimg.com/originals/39/70/fd/3970fd45f8264338153834f7ff18f4f0.gif" />
+            <img src="https://i.pinimg.com/originals/39/70/fd/3970fd45f8264338153834f7ff18f4f0.gif"  width="200" height="222"  />
           </div>
         </div>
       </div>
