--- a/startWeb.html
+++ b/startWeb.html
@@ -26,7 +26,7 @@
       <div id="center" class="jumbotron p-3 p-md-5 text-white rounded bg-dark" style="background-color: white !important; border: 4px double black;">
           <div class="col-md-12 px-0">
             <h1 class="display-4 font-italic" align="center" style="color: black;">Игра</h1>
-            <p class="lead my-5" align="center" style="color: black;"> Создание персонажей </p>
+            <p class="lead my-5" align="center" style="color: black;"> <b>Создание персонажей</b></p>
             <p class="lead my-3" align="center" style="color: black;"> Перед началом игры каждый игрок создаёт персонажа — своё воплощение в игровом мире. </p>
                <p> <img src="https://img2.joyreactor.cc/pics/post/Fantasy-art-Dungeons-%26-Dragons-artist-5631663.png"   width="50%" height="auto"  <p/>
                  
