--- a/startWeb.html
+++ b/startWeb.html
@@ -27,13 +27,8 @@
           <div class="col-md-12 px-0">
             <h1 class="display-4 font-italic" align="center" style="color: black;">Игра</h1>
             <p class="lead my-5" align="center" style="color: black;"> <b>Создание персонажей</b></p>
-            <p class="lead my-3" align="center" style="color: black;"> Перед началом игры каждый игрок создаёт персонажа — своё воплощение в игровом мире. </p>
-   
-                 
-            <p>  Для этого в первую очередь определяются его базовые параметры — сила, телосложение, ловкость, интеллект, мудрость и харизма.
-            В течение игры партия (игроки, действующие вместе) путешествует по миру и выполняют различные миссии и задания. В процессе путешествий персонажи по усмотрению ДМ’а получают опыт, который тем или иным способом способствует улучшению характеристик персонажа. Также персонажи зарабатывают деньги и получают экипировку.
-
-Игра может включать в себя множество более мелких игр, где персонажи переходят из одной в другую. Она может заканчиваться после выполнения определённой миссии, а может продолжаться бесконечно.</p>
+            <p class="lead my-3" align="center" style="color: black;"> Перед началом игры каждый игрок создаёт персонажа — своё воплощение в игровом мире. Для этого в первую очередь определяются его базовые параметры — сила, телосложение, ловкость, интеллект, мудрость и харизма.
+            В течение игры партия (игроки, действующие вместе) путешествует по миру и выполняют различные миссии и задания. В процессе путешествий персонажи по усмотрению ДМ’а получают опыт, который тем или иным способом способствует улучшению характеристик персонажа. Также персонажи зарабатывают деньги и получают экипировку. Игра может включать в себя множество более мелких игр, где персонажи переходят из одной в другую. Она может заканчиваться после выполнения определённой миссии, а может продолжаться бесконечно.</p>
           </div>
         </div>
       </div>
