--- a/header.html
+++ b/header.html
@@ -10,10 +10,10 @@
           <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="startWeb.html">Игра</a>
+          <a class="nav-link" href="startWeb.html">Основы игры</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="startPython.html">Основы игры</a>
+          <a class="nav-link" href="startPython.html">В культуре</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="oge.html">История</a>
