--- a/startPython.html
+++ b/startPython.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Сайт-Шаблон</title>
+    <title>В культуре</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="css/button.css" rel="stylesheet" type="text/css">
     <script src="js/button.js"></script>
@@ -21,8 +21,11 @@
 
       <div id="center" class="jumbotron p-3 p-md-5 text-white rounded bg-dark" style="background-color: white !important; border: 4px double black;">
           <div class="col-md-12 px-0">
-            <h1 class="display-4 font-italic" align="center" style="color: black;">Основы Python</h1>
-            <p class="lead my-3" align="center" style="color: black;">На данном пробном сайте вы можете ознакомится с основами Python</p>
+            <h1 class="display-4 font-italic" align="center" style="color: black;">В культуре</h1>
+            <p class="lead my-3" align="center" style="color: black;">Отсылки к игре многократно фигурируют в американском телесериале «Очень странные дела» начиная с первого эпизода первого сезона.</p>
+            <p>На основе Днд создана программа «Подземелья Чикен Карри» </p>
+            <p>В 2023 году был выпущен фильм «Поземелье и драконы: Честь воров»</p>
+           
             <p class="lead mb-0" align="center" style="color: black;"><a href="https://www.python.org" class="text-black font-weight-bold">Ссылка на Python</a></p>
           </div>
         </div>
