--- a/header.html
+++ b/header.html
@@ -23,8 +23,8 @@
             Полезные ссылки
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="https://drive.google.com/file/d/1kr9zUnGhpXp95iy09ryLxz1A6X3fpNwu/view?usp=share_link">Учебник Python</a></li>
-            <li><a class="dropdown-item" href="https://drive.google.com/file/d/140Lj63NOxZ7yKTdZuCl_nb1PyngKBWF3/view?usp=share_link">Задачник Python</a></li>
+            <li><a class="dropdown-item" https://www.youtube.com/watch?v=ZrdLM5hTmr0&t=9s">Руководство по Dungeons&Dragons</a></li>
+            <li><a class="dropdown-item" https://hobbygames.ru/dungeons-and-dragons">Магазин Dungeons&Dragons</a></li>
             <li><a class="dropdown-item" href="https://getbootstrap.com/docs/5.3/components/carousel/">Bootstrap 5.3</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="https://vk.com/khdmitry">Ссылка на разработчика</a></li>
