--- a/header.html
+++ b/header.html
@@ -23,11 +23,10 @@
             Полезные ссылки
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" https://www.youtube.com/watch?v=ZrdLM5hTmr0&t=9s">Руководство по Dungeons&Dragons</a></li>
-            <li><a class="dropdown-item" https://hobbygames.ru/dungeons-and-dragons">Магазин Dungeons&Dragons</a></li>
-            <li><a class="dropdown-item" href="https://getbootstrap.com/docs/5.3/components/carousel/">Bootstrap 5.3</a></li>
+            <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=ZrdLM5hTmr0&t=9s">Руководство по Dungeons&Dragons</a></li>
+            <li><a class="dropdown-item" href="https://hobbygames.ru/dungeons-and-dragons">Магазин Dungeons&Dragons</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="https://vk.com/khdmitry">Ссылка на разработчика</a></li>
+            <li><a class="dropdown-item" href=" https://vk.com/id783187285">Ссылка на разработчика</a></li>
           </ul>
         </li>
       </ul>
