--- a/startPython.html
+++ b/startPython.html
@@ -27,7 +27,7 @@
             <p class="lead my-3" align="center" style="color: black;">На основе Днд создана программа «Подземелья Чикен Карри» </p>
              <img align="middle"src=" https://i.ytimg.com/vi/l9reQH01D-k/maxresdefault.jpg" width="450" height="258"  </p>
             <p class="lead my-3" align="center" style="color: black;">В 2023 году был выпущен фильм «Поземелье и драконы: Честь воров»</p>
-             <img align="middle" src=" https://static.kinoafisha.info/k/movie_posters/canvas/800x1200/upload/movie_posters/3/7/0/8354073/797831999378.jpg"  width="290" height="450"  </p>
+             <img align="center" src=" https://static.kinoafisha.info/k/movie_posters/canvas/800x1200/upload/movie_posters/3/7/0/8354073/797831999378.jpg"  width="290" height="450"  </p>
     
                           
 
