--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="startWeb.html">Основы игры</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="startPython.html">В культуре</a>
+          <a class="nav-link" href="Inculture.html">В культуре</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="oge.html">История</a>
