--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
           <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="startWeb.html">Основы игры</a>
+          <a class="nav-link" href="basicsgame.html">Основы игры</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Inculture.html">В культуре</a>
