--- a/header.html
+++ b/header.html
@@ -16,7 +16,7 @@
           <a class="nav-link" href="Inculture.html">В культуре</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="oge.html">История</a>
+          <a class="nav-link" href="history.html">История</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
