--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
 <footer id="programmer" class="container-fluid">
-    <p>©2023 <a href="https://vk.com/khdmitry">nik</a></p>
+    <p>©2023 <a href="https://vk.com/id783187285">nik</a></p>
   </footer>
