--- a/index.html
+++ b/index.html
@@ -149,8 +149,11 @@
     <div include-html="footer.html" id="footer_file"></div>
 
       <button onclick="topFunction()" id="myBtn" title="Go to top">В начало</button>
-
-      
+  
+    <script type="text/javascript" src="main.js"></script>
+   
+   
+     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
